Prevent list items from overflowing the parent container.

--- a/src/assets/scss/layout/_layout.scss
+++ b/src/assets/scss/layout/_layout.scss
@@ -60,6 +60,7 @@
 
 .list {
     display: flex;
+    flex-wrap: wrap;
     gap: .5rem;
 }
 
