--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -145,6 +145,7 @@ body {
 
 .list {
   display: flex;
+  flex-wrap: wrap;
   gap: 0.5rem;
 }
 
